# Insect-Tracking---FYP

./: .gitignore  .gitmodules  .gitmodules.orig  Book1.xlsx  CMakeLists.txt  Installation Steps  Installation Steps.txt  README.md  README.txt  procTimes.py  test.avi  yagiReadme.txt  yagiTest.ino
EmbeddedSystem/: CMakeLists.txt  Fps.cpp  Input.h  Insect.cpp  Insect.h  IrCam.cpp  IrCam.h  Main.cpp  Main_OLD.cpp  Main_Working.cpp  Output.cpp  Output.h  Threshold.cpp  Threshold.h  Thresholding.cpp  Track_Insect  autopilot_interface.cpp  autopilot_interface.h  mavlink_control.cpp  mavlink_control.h  parameters.h  serial_port.cpp  serial_port.h
MavlinkComms/: CMakeCache.txt  mavlink_control  mavlink_control.cpp  mavlink_control.h  serial_port.h
Project2/: Fps.h  Insect.cpp  Insect.h  IrCam.h  Kalman.cpp  Kalman.h  Main.cpp  Project2.sln  SwarmingProjectTest.psess  SwarmingProjectTest150512(1).vsp  SwarmingProjectTest150512.vsp  SwarmingProjectTest150513(1).vsp  SwarmingProjectTest150514(2).vsp  SwarmingProjectTest150518(3).vsp
Project2_NT/: Project2.sln
Project2_NT/Project2/: CMakeCache.txt  CMakeLists.txt  Capture.cpp  Fps.cpp  Fps.h  Insect.cpp  Insect.h  IrCam.cpp  IrCam.h  Main.cpp  Makefile  Project2.vcxproj  Project2.vcxproj.filters  Source.cpp  Source1.cpp  Thresholding.cpp  Thresholding.h  Track_Insect  beetle.cpp  beetle.h  cmake_install.cmake  fps.cpp  fps.h  gmon.out  histTest.cpp  histogram.cpp  histogram.h  image_processing.cpp  image_processing.h  kalman.cpp  kalman.h  main.cpp  main.h  test.txt
documents/: CMakeLists.txt  Hardware Tips.txt
logs/: log-01-Mar-16-10:34:48.txt  log-01-Mar-16-10:35:02.txt
matlab/: UAVPayload.xlsx  antPoster.fig  ctest.asv  fastfilterthing.m  interpretTestData.m  investigateNoiseFloor.m  leftAntPoster.fig  maf.m  makeTests.asv  makeTests.m  maxWidth.m  pulse_110dbm.mat  quickPlotRaw30m.m  quickieConv.m  removeNoise.m  rhoTest.m  (+6 more)
src/: CMakeCache.txt  CMakeLists.txt  Input.cpp  Input.h  Insect.cpp  IrCam.h  Main.cpp  Makefile  Threshold.h  Track_Insect  autopilot_interface.cpp  autopilot_interface.h  camera_interface.cpp  camera_interface.h  cmake_install.cmake  common.h  gmon.out  insect.cpp  insect.h  main.cpp  mavlink_control.h  mavlink_interface.cpp  mavlink_interface.h  parameters.h  serial_interface.cpp  serial_interface.h  serial_port.cpp  serial_port.h  threshold.cpp  threshold.h  ui_input.cpp  ui_input.h  ui_output.cpp  ui_output.h
src/include/: autopilot_interface.h  camera_interface.h  insect.h  mavlink_interface.h  serial_interface.h
(+209 files in other folders)
